# gtest_demo

./: .travis.yml  CMakeLists.txt  README.md  exception_demo.cpp  main.cpp  sonar-project.properties
include/: friends_lib.h
lib/: friends_lib.cpp
test/: friends_lib_test.cpp
